commiting css card effects

--- a/Index.html
+++ b/Index.html
@@ -24,11 +24,11 @@
         <div class="card-header fw-bold">
             
             <span><img src="/image/whatsapp.png" alt="Whatsapp" id="waImg"></span>
-            <span id="waText">Whatsapp Sign In</span>
+            <span id="waText"> Whatsapp Sign In</span>
         </div>
         <div class="card-body">
-          <h5 class="card-title mb-3">Use your whatsapp account to sign in</h5>
-          <p class="card-text">No more OTPs required, Signing in is fast and secure</p>
+          <h3 class="card-title mb-4" >Use your whatsapp account to sign in</h3>
+          <p class="card-text mb-4">No more OTPs required, Signing in is fast and secure</p>
           
           <!-- <a href="#" class="btn btn-primary"><div id="otpless"></div></a> -->
           <div id="otpless"></div>
