commiting text change

--- a/Index.html
+++ b/Index.html
@@ -27,8 +27,8 @@
             <span id="waText"> Whatsapp Sign In</span>
         </div>
         <div class="card-body">
-          <h3 class="card-title mb-4" >Use your whatsapp account to sign in</h3>
-          <p class="card-text mb-4">No more OTPs required, Signing in is fast and secure</p>
+          <h3 class="card-title mb-4" >Welcome to OTPless</h3>
+          <p class="card-text mb-4">No more OTPs required, Signing in is fast and secure.</p>
           
           <!-- <a href="#" class="btn btn-primary"><div id="otpless"></div></a> -->
           <div id="otpless"></div>
